* Contined working on xUnit tests
* Edited main library project to expose internal methods to the testing project
* Created basic testing method for MD5 comparison

--- a/General Functions/CSharpLibrary.Tests/CSharpLibrary.Tests.csproj
+++ b/General Functions/CSharpLibrary.Tests/CSharpLibrary.Tests.csproj
@@ -65,7 +65,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FileOperations.Tests\FileComparison.Tests.cs" />
+    <Compile Include="FileOperations.Tests\FileComparisonTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
